--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
   <title>AdminPro</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="733061079466-i50s90vt0k3aca40h76gfr1m4krog9s8.apps.googleusercontent.com">
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script src="https://apis.google.com/js/platform.js"></script>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
